--- a/package.json
+++ b/package.json
@@ -49,8 +49,10 @@
   },
   "dependencies": {
     "@vueuse/core": "^8.1.1",
+    "chalk": "^5.1.2",
     "fast-glob": "^3.2.12",
     "simon-js-tool": "^4.1.13",
+    "terminal-link": "^3.0.0",
     "vue": "^3.2.36",
     "yamljs": "^0.3.0"
   },
