--- a/package.json
+++ b/package.json
@@ -33,10 +33,13 @@
     "dist"
   ],
   "scripts": {
+    "preinstall": "npx only-allow pnpm",
+    "postinstall": "simple-git-hooks",
     "build": "pkgroll --minify",
     "dev": "pkgroll --watch",
     "play": "pnpm run -C playground dev",
     "play:build": "pnpm run -C playground build",
+    "format": "prettier --write --cache .",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "typecheck": "vue-tsc --noEmit",
@@ -61,13 +64,28 @@
     "@antfu/eslint-config": "^0.26.1",
     "@types/node": "^17.0.45",
     "@vitejs/plugin-vue": "^3.0.1",
-    "bumpp": "^7.1.1",
+    "bumpp": "^8.2.1",
     "eslint": "^8.16.0",
     "eslint-plugin-n": "^15.2.1",
+    "lint-staged": "^13.1.0",
+    "picocolors": "^1.0.0",
     "pkgroll": "^1.3.1",
+    "prettier": "^2.8.1",
+    "simple-git-hooks": "^2.8.1",
+    "tsx": "^3.12.1",
     "typescript": "^4.7.2",
     "vite": "^3.0.2",
     "vitest": "^0.13.1"
+  },
+  "simple-git-hooks": {
+    "pre-commit": "pnpm exec lint-staged --concurrent false",
+    "commit-msg": "pnpm exec tsx scripts/verifyCommit.ts $1"
+  },
+  "lint-staged": {
+    "*": [
+      "prettier --write --cache --ignore-unknown"
+    ],
+    "*.{vue,js,ts,jsx,tsx,md,json}": "eslint --fix"
   },
   "eslintConfig": {
     "extends": "@antfu"
