fix: noparams error

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,9 +12,5 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true
   },
-  "exclude": [
-    "dist",
-    "playground",
-    "cypress"
-  ]
+  "exclude": ["dist", "playground", "cypress"]
 }
