--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@types/node": "^17.0.45",
     "@vitejs/plugin-vue": "^3.0.1",
     "bumpp": "^8.2.1",
+    "commander": "^10.0.0",
     "eslint": "^8.16.0",
     "eslint-plugin-n": "^15.2.1",
     "lint-staged": "^13.1.0",
