--- a/package.json
+++ b/package.json
@@ -27,14 +27,14 @@
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "bin": {
-    "ccommand": "dist/index.mjs"
+    "ccommand": "./cli.mjs"
   },
   "files": [
     "dist"
   ],
   "scripts": {
-    "build": "pkgroll --minify",
-    "dev": "pkgroll --watch",
+    "build": "tsup ./src/index.ts ./src/cli.ts --minify",
+    "dev": "tsup --watch",
     "play": "pnpm run -C playground dev",
     "play:build": "pnpm run -C playground build",
     "format": "prettier --write --cache .",
@@ -50,6 +50,7 @@
   },
   "dependencies": {
     "@simon_he/colorize": "^0.0.1",
+    "build": "^0.1.4",
     "fast-glob": "^3.2.12",
     "yamljs": "^0.3.0"
   },
@@ -63,9 +64,9 @@
     "lazy-js-utils": "^0.0.66",
     "lint-staged": "^13.1.0",
     "picocolors": "^1.0.0",
-    "pkgroll": "^1.3.1",
     "prettier": "^2.8.1",
     "terminal-link": "^3.0.0",
+    "tsup": "^7.2.0",
     "tsx": "^3.12.1",
     "typescript": "^4.7.2",
     "vite": "^3.0.2",
