--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "require": "./dist/index.js",
-      "import": "./dist/index.mjs"
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js"
     }
   },
   "main": "./dist/index.js",
@@ -52,23 +52,20 @@
     "@simon_he/colorize": "^0.0.1",
     "fast-glob": "^3.3.3",
     "lazy-js-utils": "^0.1.37",
+    "picocolors": "^1.1.1",
+    "terminal-link": "^3.0.0",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.34.2",
+    "@antfu/eslint-config": "^4.10.2",
     "@types/node": "^17.0.45",
-    "@vitejs/plugin-vue": "^3.2.0",
     "bumpp": "^8.2.1",
-    "eslint": "^8.57.1",
-    "eslint-plugin-n": "^15.7.0",
+    "eslint": "^9.23.0",
     "lint-staged": "^13.3.0",
-    "picocolors": "^1.1.1",
     "prettier": "^2.8.8",
-    "terminal-link": "^3.0.0",
     "tsup": "^7.3.0",
     "tsx": "^3.14.0",
     "typescript": "^4.9.5",
-    "vite": "^3.2.11",
     "vitest": "^0.13.1"
   },
   "lint-staged": {
@@ -76,8 +73,5 @@
       "prettier --write --cache --ignore-unknown"
     ],
     "*.{vue,js,ts,jsx,tsx,md,json}": "eslint --fix"
-  },
-  "eslintConfig": {
-    "extends": "@antfu"
   }
 }
