--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ccommand",
+  "type": "module",
   "version": "1.0.86",
-  "packageManager": "pnpm@6.35.1",
   "description": "ccommand",
   "author": "Simon He",
   "license": "MIT",
@@ -23,8 +23,7 @@
       "require": "./dist/index.js"
     }
   },
-  "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
+  "main": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "bin": {
     "ccommand": "./cli.mjs"
@@ -33,8 +32,8 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsup ./src/index.ts ./src/cli.ts --minify",
-    "dev": "tsup ./src/index.ts ./src/cli.ts --watch",
+    "build": "tsdown ./src/index.ts ./src/cli.ts --minify",
+    "dev": "tsdown ./src/index.ts ./src/cli.ts --watch",
     "play": "pnpm run -C playground dev",
     "play:build": "pnpm run -C playground build",
     "format": "prettier --write --cache .",
@@ -50,19 +49,18 @@
   "dependencies": {
     "@simon_he/colorize": "^0.0.1",
     "fast-glob": "^3.3.3",
-    "lazy-js-utils": "^0.1.37",
+    "lazy-js-utils": "^0.1.47",
     "picocolors": "^1.1.1",
     "terminal-link": "^3.0.0",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^4.11.0",
+    "@antfu/eslint-config": "^4.19.0",
     "@types/node": "^17.0.45",
     "bumpp": "^8.2.1",
-    "eslint": "^9.23.0",
+    "eslint": "^9.37.0",
     "lint-staged": "^13.3.0",
     "prettier": "^2.8.8",
-    "tsup": "^7.3.0",
     "tsx": "^3.14.0",
     "typescript": "^4.9.5",
     "vitest": "^0.13.1"
