--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     ".": {
       "types": "./dist/index.d.ts",
       "import": "./dist/index.mjs",
-      "require": "./dist/index.js"
+      "require": "./dist/index.cjs"
     }
   },
   "main": "./dist/index.mjs",
@@ -32,7 +32,7 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsdown ./src/index.ts ./src/cli.ts --minify",
+    "build": "tsdown ./src/index.ts ./src/cli.ts --minify --format cjs,esm",
     "dev": "tsdown ./src/index.ts ./src/cli.ts --watch",
     "play": "pnpm run -C playground dev",
     "play:build": "pnpm run -C playground build",
@@ -49,18 +49,19 @@
   "dependencies": {
     "@simon_he/colorize": "^0.0.1",
     "fast-glob": "^3.3.3",
-    "lazy-js-utils": "^0.1.47",
+    "lazy-js-utils": "^0.1.49",
     "picocolors": "^1.1.1",
     "terminal-link": "^3.0.0",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^4.19.0",
+    "@antfu/eslint-config": "^7.2.0",
     "@types/node": "^17.0.45",
     "bumpp": "^8.2.1",
-    "eslint": "^9.37.0",
+    "eslint": "^9.39.2",
     "lint-staged": "^13.3.0",
     "prettier": "^2.8.8",
+    "tsdown": "^0.20.1",
     "tsx": "^3.14.0",
     "typescript": "^4.9.5",
     "vitest": "^0.13.1"
